--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 </div>
 
 <script src="script.js"></script>
+  <footer>
+  <p>&copy; 2024 @sudheer debbati. All rights reserved.</p>
+</footer>
 </body>
 </html>
 
