--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <input type="number" id="number" name="number" min="1" max="5" required>
   <button type="submit">Generate Stack</button>
 </form>
-
+<h1>RECURSION</h1>
 <div id="stack-title">numbers pushed into Stack</div>
 <div id="stack-container"></div>
 
