--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <button type="submit">Generate Stack</button>
 </form>
 <h1>RECURSION</h1>
-<p>The logic behind the factorial recursion code is to repeatedly multiply a number n by the factorial of n-1 until the base case of n=0 is reached, where the factorial is defined as 1.</p>
+<p><strong>The logic behind the factorial recursion code is to repeatedly multiply a number n by the factorial of n-1 until the base case of n=0 is reached, where the factorial is defined as 1.</strong></p>
 <div id="stack-title">numbers pushed into Stack</div>
 <div id="stack-container"></div>
 
